{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 64,
  "lineage": "94b1ba28-d664-197d-9638-300ac27942d9",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09046cabf4aa8b613",
            "arn": "arn:aws:ec2:us-east-1:891657576749:instance/i-0ca5389dbfb58a488",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ca5389dbfb58a488",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-091b7e2cea6f78979",
            "private_dns": "ip-10-0-0-81.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.81",
            "public_dns": "ec2-3-235-44-42.compute-1.amazonaws.com",
            "public_ip": "3.235.44.42",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07fd7be133898ecdc",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05492a00d66ca18de",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdd50003519a49be"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-09046cabf4aa8b613",
            "arn": "arn:aws:ec2:us-east-1:891657576749:instance/i-0012790c8f82d05fc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 2,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0012790c8f82d05fc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-048bbb9956bb770ce",
            "private_dns": "ip-10-0-1-252.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.252",
            "public_dns": "ec2-3-92-211-193.compute-1.amazonaws.com",
            "public_ip": "3.92.211.193",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-095db2cd32a441383",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-057f961ce4b984479",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0cdd50003519a49be"
            ]
          },
          "dependencies": [
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:internet-gateway/igw-03a476bfe8356504f",
            "id": "igw-03a476bfe8356504f",
            "owner_id": "891657576749",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:loadbalancer/app/globo-web-alb/193e0aa834bdcb34",
            "arn_suffix": "app/globo-web-alb/193e0aa834bdcb34",
            "desync_mitigation_mode": "defensive",
            "dns_name": "globo-web-alb-2128434716.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:891657576749:loadbalancer/app/globo-web-alb/193e0aa834bdcb34",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "globo-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0320e557ec77c654b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-05492a00d66ca18de"
              },
              {
                "subnet_id": "subnet-057f961ce4b984479"
              }
            ],
            "subnets": [
              "subnet-05492a00d66ca18de",
              "subnet-057f961ce4b984479"
            ],
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "vpc_id": "vpc-08cee7ffb73076a92",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:listener/app/globo-web-alb/193e0aa834bdcb34/2962bb5a4ddcbc22",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891657576749:listener/app/globo-web-alb/193e0aa834bdcb34/2962bb5a4ddcbc22",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:loadbalancer/app/globo-web-alb/193e0aa834bdcb34",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.alb-sg",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898",
            "arn_suffix": "targetgroup/globo-web-alb-tg/781c9a6d04339898",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "globo-web-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "target_type": "instance",
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898-20230218033038473900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898",
            "target_id": "i-0ca5389dbfb58a488"
          },
          "dependencies": [
            "aws_instance.nginx1",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "nginx2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898-20230218033454948200000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891657576749:targetgroup/globo-web-alb-tg/781c9a6d04339898",
            "target_id": "i-0012790c8f82d05fc"
          },
          "dependencies": [
            "aws_instance.nginx2",
            "aws_lb_target_group.nginx",
            "aws_security_group.nginx-sg",
            "aws_subnet.subnet2",
            "data.aws_ssm_parameter.ami"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:route-table/rtb-063940364b0cbe380",
            "id": "rtb-063940364b0cbe380",
            "owner_id": "891657576749",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a476bfe8356504f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02fc7bfb6911260b1",
            "route_table_id": "rtb-063940364b0cbe380",
            "subnet_id": "subnet-05492a00d66ca18de"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06433d129293c4028",
            "route_table_id": "rtb-063940364b0cbe380",
            "subnet_id": "subnet-057f961ce4b984479"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:security-group/sg-0320e557ec77c654b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0320e557ec77c654b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_alb_sg",
            "name_prefix": "",
            "owner_id": "891657576749",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nginx-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:security-group/sg-0cdd50003519a49be",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdd50003519a49be",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/24",
                  "10.0.1.0/24"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx_sg",
            "name_prefix": "",
            "owner_id": "891657576749",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "timeouts": null,
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:subnet/subnet-05492a00d66ca18de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05492a00d66ca18de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891657576749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:subnet/subnet-057f961ce4b984479",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-057f961ce4b984479",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891657576749",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "vpc_id": "vpc-08cee7ffb73076a92"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891657576749:vpc/vpc-08cee7ffb73076a92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fab0bed925b5f15f",
            "default_route_table_id": "rtb-052ad03f9a60c63ae",
            "default_security_group_id": "sg-0245ed2c595a226f9",
            "dhcp_options_id": "dopt-6c96e517",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-08cee7ffb73076a92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-052ad03f9a60c63ae",
            "owner_id": "891657576749",
            "tags": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            },
            "tags_all": {
              "billing_code": "laBill",
              "company": "Globomatics",
              "project": "Globomatics-miProject"
            }
          }
        }
      ]
    }
  ]
}